# py-stats19

./: .gitignore  LICENSE  README.md  pyproject.toml
pystats19/: __init__.py  dl.py  format.py  read.py  source.py  utils.py
pystats19/data/: file_names.pkl  pystats19_prebuilt_schema.pkl  stats19_schema.pkl  stats19_variables.pkl
