[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystats19"
version = "0.1.2"
requires-python = ">=3.10"
description = "Python package for downloading and formatting the UK's Road Safety Data."
authors = [
    { name = "Jinshuai Ma", email = "j.ma23@lse.ac.uk" },
    { name = "Xiaowei Gao", email = "ucesxwg@ucl.ac.uk" }
]
maintainers = [
    { name = "Jinshuai Ma", email = "j.ma23@lse.ac.uk" },
    { name = "Xiaowei Gao", email = "ucesxwg@ucl.ac.uk" }
]
dependencies = [
    "pandas >= 1.5.0",
    "geopandas >= 0.12.0",
    "shapely >= 1.8.5",
    "numpy < 2.0.0"
]
readme = "README.md"
license = { file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Mayazure/py-stats19"

[tool.setuptools.packages.find]
include = ["pystats19"]

[tool.setuptools.package-data]
pystats19 = ["data/*.pkl"]
